[metadata]
name = yahoo-auction-auto
version = attr: yahoo_auction_auto.__version__
author = Shuhei Nitta
author_email = hinihatetsu@gmail.com
url = https://github.com/hinihatetsu/yahoo-auction-auto
description = Automate Yahoo Auction tasks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.9
include_package_data = True
packages = find:
test_suite = tests
install_requires =
    selenium
    requests-async
    beautifulsoup4
    lxml
    chromedriver-binary-auto
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    tests


[mypy]
strict = True
ignore_missing_imports = True